--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"></activity>
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:label="@string/title_activity_main2"></activity>-->
         <activity android:name=".NewItemActivity" />
         <activity
             android:name=".ScannedBarcodeActivity"
