- dodanie ShowItemInfoActivity - niezbędne wywołania w ViewModels - mała refaktoryzacja kodu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<!--        <activity-->
-<!--            android:name=".MainActivity"-->
-<!--            android:label="@string/title_activity_main2"></activity>-->
+        <activity android:name=".ShowItemInfo">
+        </activity>
+        <!-- <activity -->
+        <!-- android:name=".MainActivity" -->
+        <!-- android:label="@string/title_activity_main2"></activity> -->
         <activity android:name=".NewItemActivity" />
         <activity android:name=".NewStoragePlaceActivity" />
         <activity
-            android:name=".ScannedBarcodeActivity"
+            android:name=".ScanBarcodeActivity"
             android:label="@string/title_activity_scanned_barcode"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
@@ -33,14 +35,14 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-    <uses-feature android:name="android.hardware.camera.autofocus" />
-
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
